contactsandorgs/branches/spraetz/src/objects/Contacts_And_Orgs_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Application settings for the Contacts and Organizations package of the Nonprofit Starter Pack</description>
    <fields>
        <fullName>Account_Processor__c</fullName>
        <inlineHelpText>Setting for the Account model. Should be &quot;One-to-one&quot; or &quot;Individual&quot;. Replaces the custom field Contact.SystemAccountProcessor__c</inlineHelpText>
        <label>Account Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Account_Model_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to turn off the Account Model trigger. Accounts will no longer be automatically created for Contacts. Only use this if you understand the ramifications. Turning off the account model could get your data into an inconsistent state.</inlineHelpText>
        <label>Disable Account Model Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Opportunity_Contact_Role_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to turn on the automatic creation of Opportunity Contact Roles for newly created Opportunities in the One-to-One model.</inlineHelpText>
        <label>Enable Opportunity Contact Role Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Role_Default_role__c</fullName>
        <inlineHelpText>Default role for the primary Opportunity Contact Role</inlineHelpText>
        <label>Opportunity Contact Role Default role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Update_Notifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Update Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upgrade_Check_Scheduled_Job_Id__c</fullName>
        <label>Upgrade Check Scheduled Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Contacts And Orgs Settings</label>
</CustomObject>